--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.6.2"
+  },
+  "dependencies": {
+    "readline-sync": "^1.4.10"
   }
 }
